# fantastic-palm-tree

./: .coverage  .gitignore  .pre-commit-config.yaml  Architecture.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION_CONSOLIDATION.md  Dockerfile  EXECUTION_INTERFACE.md  IMPLEMENTATION_SUMMARY.md  INTERFACE_SUMMARY.md  LICENSE  MIGRATION.md  PAPER_TRADING_GUIDE.md  README.md  README_comprehensive.md  README_original.md  SECURITY.md  SUPPORT.md  __init__.py  api_server.py  auth.py  demo_defensive_coding.py  demo_modular_architecture.py  demo_realistic_execution.py  docker-compose.yml  enhanced_live_trading_demo.py  enhancements_strategy.py  env_config.py  example_usage.py  live_trading_demo.py  next.config.js  package.json  pyproject.toml  requirements-lock.txt  requirements.txt  test_data_providers.py  test_defensive_coding.py  (+8 more)
.github/: dependabot.yml  markdown-link-check.json
.github/ISSUE_TEMPLATE/: architecture.md  cicd.md  config.yml  documentation.md  governance.md  security.md
.github/workflows/: ci.yml  dependency-triage.yml  docs.yml  security.yml
backtesting/: __init__.py
backtesting/brokers/: __init__.py  auth.py  base.py  paper.py  schwab.py
backtesting/core/: __init__.py  data.py  engine.py  order.py  portfolio.py  strategy.py
backtesting/data_providers/: __init__.py  adapter.py  alpha_vantage.py  mock_alpha_vantage.py
backtesting/execution/: __init__.py  bridge.py  live_engine.py
backtesting/killswitch/: __init__.py  manager.py  triggers.py
backtesting/metrics/: __init__.py  calculator.py  live_aggregator.py  performance.py  pipeline.py  reports.py  risk.py  sortino.py
backtesting/metrics/processors/: __init__.py  base.py  drawdown.py  equity.py  trades.py
backtesting/sweep/: __init__.py  grid_search.py  optimizer.py  parameter_space.py  results.py
components/charts/: DrawdownChart.tsx  EquityCurveChart.tsx
components/dashboard/: BacktestList.tsx  MetricsCard.tsx  StrategyCard.tsx  StrategyList.tsx  TradeTable.tsx
components/layout/: Layout.tsx
demo_results/: portfolio_history_20250906_204318.csv  portfolio_metrics_20250906_204318.csv  positions_20250906_204318.csv  trade_history_20250906_204318.csv
docs/: ARCHITECTURE_DIAGRAM.md  ATR_BREAKOUT_STRATEGY.md  DEPENDENCY_MANAGEMENT.md  DEPENDENCY_TRIAGE_GUIDE.md  DISCLAIMERS.md  ERROR_HANDLING_IMPROVEMENTS.md  EXPERIMENTAL_FEATURES.md  INTERFACES.md  ISSUE_MIGRATION_GUIDE.md  METRICS_PIPELINE.md  REALISTIC_EXECUTION.md  REPOSITORY_HYGIENE_SUMMARY.md  TASK_CATEGORIZATION.md  TEST_COVERAGE.md
docs/adr/: 001-modular-architecture.md  002-type-safety-approach.md  003-configuration-system.md  004-broker-integration-pattern.md  README.md
examples/: atr_breakout_demo.py  metrics_pipeline_extension.py
fantastic_palm_tree/: __init__.py  config.py  exceptions.py  interfaces.py  logging.py  results.py
fantastic_palm_tree.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
fantastic_palm_tree/indicators/: atr.py
fantastic_palm_tree/models/: position.py
fantastic_palm_tree/risk/: trailing.py
fantastic_palm_tree/strategy/: __init__.py  atr_breakout.py  base.py  enhanced.py
interfaces/: __init__.py  data_provider.py  engine.py  metrics.py  order.py  position.py  strategy.py  trade_result.py
pages/: index.tsx
pages/api/: backtest.ts
pages/dashboard/: backtests.tsx  index.tsx  strategies.tsx
scripts/: dependency-triage.py
src/fantastic_palm_tree/: __init__.py
tests/: __init__.py  conftest.py  test_atr_breakout_strategy.py  test_basic_strategy.py  test_dynamic_trailing_atr.py  test_dynamic_vs_static_trailing.py  test_enhanced_strategy_integration.py  test_execution_integration.py  test_market_impact.py  test_metrics_pipeline.py  test_partial_before_trailing.py  test_partials_multilevel.py  test_position_sizing_caps.py  test_realistic_execution.py  test_realized_r_multiple.py  test_risk_guard_kill_switch.py  test_short_r_multiple_partial.py  test_shorts_disabled.py  test_smoke.py  test_trailing_activation_threshold.py  test_trailing_parametrized.py  test_utils.py
types/: backtest.ts
utils/: mockData.ts
